doing makeUSer tdd

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1>City Animals</h1>
         <h2>Live One Day as an Animal</h2>
     </header>
-        <form>
+        <form id="user-sign-up">
 
             <fieldset>
                 <legend>Raccoon</legend>
                 <label for="raccoon">
                     <img src="./assets/raccoon_PNG16964.png" alt="raccoon image">
-                    <input name="raccoon" type="radio">
+                    <input id="raccoon" name="animal" type="radio">
                 </label>
             </fieldset>
             
@@ -26,7 +26,7 @@
                 <legend>Pigeon</legend>
                 <label for="pigeon">
                     <img src="./assets/pigeon_PNG54592.png" alt="pigeon image">
-                    <input name="pigeon" type="radio">
+                    <input id="pigeon" name="animal" type="radio">
                 </label>
             </fieldset>
             
@@ -34,7 +34,7 @@
                 <legend>Squirrel</legend>
                 <label for="squirrel">
                     <img src="./assets/squirrel_PNG15799.png" alt="squirrel image">
-                    <input name="squirrel" type="radio">
+                    <input id="squirrel" name="squirrel" type="radio">
                 </label>
             </fieldset>
             <section>
