designed map page

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
             <fieldset>
                 <legend>Raccoon</legend>
                 <label>
-                    <img src="./assets/raccoon_PNG16964.png" alt="raccoon image">
+                    <img src="./assets/avatars/raccoon.png" alt="raccoon image">
                     <input value="raccoon" name="animal" type="radio" required>
                 </label>
             </fieldset>
             <fieldset>
                 <legend>Pigeon</legend>
                 <label>
-                    <img src="./assets/pigeon_PNG54592.png" alt="pigeon image">
+                    <img src="./assets/avatars/pigeon.png" alt="pigeon image">
                     <input value="pigeon" name="animal" type="radio" required>
                 </label>
             </fieldset>
             <fieldset>
                 <legend>Squirrel</legend>
                 <label>
-                    <img src="./assets/squirrel_PNG15799.png" alt="squirrel image">
+                    <img src="./assets/avatars/squirrel.png" alt="squirrel image">
                     <input value="squirrel" name="animal" type="radio" required>
                 </label>
             </fieldset>
