--- a/map.html
+++ b/map.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Choose your Adventure</title>
+    <link rel="stylesheet" href="./src/home/index.css">
+    <link rel="stylesheet" href="./src/map/map.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Choose Your Adventure</h1>
+        <div class="profile">
+            <span id="name"></span>
+            You are a
+            <img id="avatar">
+            <span>Life:</span>
+            <span class="life"></span>
+            <span>Food:</span>
+            <span class="food"></span>
+        </div> 
+    </header>
+    <main>
+        <h2>City Adventures</h2>
+    </main>
+    <script type="module" src="./src/map/map.js"></script>
 </body>
 </html>
