--- a/map.html
+++ b/map.html
@@ -16,9 +16,9 @@
             You are a
             <img id="avatar">
             <span>Life:</span>
-            <span class="life"></span>
+            <span id="life" class="life"></span>
             <span>Food:</span>
-            <span class="food"></span>
+            <span id="food" class="food"></span>
         </div> 
     </header>
     <main>
