designed map page

--- a/map.html
+++ b/map.html
@@ -23,7 +23,13 @@
     </header>
     <main>
         <h2>City Adventures</h2>
-    </main>
+        <div class="container">
+            <img src="./assets/map.jpg" alt="city map">
+            <div class="park"><h3 id="park">Central Park</h3></div>
+            <div class="highway"><h3 id="highway">Highway</h3></div>
+            <div class="trashcan"><h3 id="trashcan">City Trashcan</h3></div>
+        </div>
+        </main>
     <script type="module" src="./src/map/map.js"></script>
 </body>
 </html>
