tdd create link and completed quest

--- a/map.html
+++ b/map.html
@@ -23,7 +23,17 @@
     </header>
     <main>
         <h2>City Adventures</h2>
+        <nav id="quests">
+            
+        </nav>
+
         <div class="container">
+            <nav>
+                <a class="quest" href="quest.html?id=park" style="top: 10%; right: 40%;">City Park</a>
+                <a class="quest" href="quest.html?id=highway" style="top: 45%; right: 20%;">Highway</a>
+                <a class="quest" href="quest.html?id=trashcan" style="top: 60%; right: 60%;">City Trashcan</a>
+                <span class="quest completed" style="top: 60%;right: 60%;">City Trashcan</span>
+            </nav>
             <img src="./assets/map.jpg" alt="city map">
             <div class="park"><h3 id="park">Central Park</h3></div>
             <div class="highway"><h3 id="highway">Highway</h3></div>
