created loadProfile file and finished map page

--- a/quest.html
+++ b/quest.html
@@ -24,7 +24,10 @@
        <h3 id="title"></h3>
        <p><img id="image"></p>
        <p id="description"></p>
-       <form id="choices"></form> 
+       <form id="choice-form">
+            <p id="choices"></p>
+            <button>Choose</button>
+       </form> 
     </main>
 
     <script type="module" src="./src/quest/quest.js"></script>
