--- a/map.html
+++ b/map.html
@@ -28,17 +28,12 @@
         </nav>
 
         <div class="container">
-            <nav>
-                <a class="quest" href="quest.html?id=park" style="top: 10%; right: 40%;">City Park</a>
-                <a class="quest" href="quest.html?id=highway" style="top: 45%; right: 20%;">Highway</a>
-                <a class="quest" href="quest.html?id=trashcan" style="top: 60%; right: 60%;">City Trashcan</a>
-                <span class="quest completed" style="top: 60%;right: 60%;">City Trashcan</span>
+            <nav id="quests">
+                <img src="./assets/map.jpg" alt="city map">    
             </nav>
-            <img src="./assets/map.jpg" alt="city map">
-            <div class="park"><h3 id="park">Central Park</h3></div>
-            <div class="highway"><h3 id="highway">Highway</h3></div>
-            <div class="trashcan"><h3 id="trashcan">City Trashcan</h3></div>
         </div>
+       
+                
         </main>
     <script type="module" src="./src/map/map.js"></script>
 </body>
