honestly forgot to commit for a long time. lost track of what i did

--- a/quest.html
+++ b/quest.html
@@ -27,7 +27,11 @@
        <form id="choice-form">
             <p id="choices"></p>
             <button>Choose</button>
-       </form> 
+       </form>
+       <section id="result" class="hidden">
+           <p id="result-description"></p>
+           <a href="map.html"> Back to Map</a>
+       </section> 
     </main>
 
     <script type="module" src="./src/quest/quest.js"></script>
